# MagicVR

./: .floo  .flooignore  .gitignore  CMakeLists.txt  README.md  TODO  linux_compile  linux_desktop_compile  start_csm  start_demo_Release  start_demo_cave_Release  user.cmake  user_desktop.cmake  windows_run_cmake.bat
.conan/: .gitignore  conanfile.txt
apps/: cave.cpp  desktop.cpp
cmake/: enable_cxx_compiler_flag_if_supported.cmake
cmake/Modules/: AddProject.cmake  FindOpenSG.cmake
config/: general.xml  mono.csm
config/DTD/: argumentVector_v1.0a4.dtd  avataraAvatar_v1.0a4.dtd  controllerManager_v1.0a4.dtd  cursorTransformationModel_v1.0a4.dtd  entityTypes_v1.0a4.dtd  environmentLayout_v1.0a4.dtd  environment_v1.0a4.dtd  eventManager_v1.0a4.dtd  generalConfig_v1.0a4.dtd  inputInterface_v1.0a4.dtd  interactionCursorRepresentation_v1.0a4.dtd  interaction_v1.0a4.dtd  modules_v1.0a4.dtd  navigation_v1.0a4.dtd  network_v1.0a4.dtd  outputInterface_v1.0a4.dtd  representation_v1.0a4.dtd  simpleAvatar_v1.0a4.dtd  simpleCursorRepresentation_v1.0a4.dtd  systemCore_v1.0a4.dtd  tiles_v1.0a4.dtd  transformationManager_v1.0a4.dtd  transformation_v1.0a4.dtd  userDatabase_v1.0a4.dtd  userTransformationModel_v1.0a4.dtd  worldDatabase_v1.0a4.dtd
config/inputinterface/: inputInterface.xml
config/inputinterface/controllermanager/: MouseKeybSensorController.xml  TrackdController.xml  VrpnController.xml
config/modules/: modules.xml
config/modules/navigation/: navigation.xml  wandNavigation.xml
config/outputinterface/: outputInterface.xml
config/outputinterface/cavescenemanager/: jku_cave_trackd.csm  jku_curvedscreen_trackd.csm  mono.csm
config/systemcore/: systemCore.xml
config/systemcore/transformationmanager/: transformationManager.xml
config/systemcore/userdatabase/: userDatabase.xml
config/systemcore/worlddatabase/: worldDatabase.xml
doc/: how-to-build.md
doc/jerome/: .gitignore  Jerome.aux  Jerome.out  Jerome.tex
doc/jerome/text/: 00-abstract.tex  01-introduction.tex  02-concept.tex  03-implementation.tex  04-userguide.tex  05-outlook.tex
doc/michael/: Michael.bbl  Michael.bib  Michael.blg  Michael.tex  makefile
doc/michael/text/: 00-abstract.tex  01-introduction.tex  02-concept.tex  03-implementation.tex  04-gestures.tex  05-outlook.tex
includes/: Arguments.h  Miniball.hpp  PathSettings.hpp  Scene.h  Scene.hpp  input.h  input.hpp
includes/glutFramework/: GlutFramework.hpp  Vector.h
includes/input/: RemoteManager.hpp  Tracker.hpp
includes/magicvr/: AppController.hpp  AppControllerWithLeapSupport.hpp  AppControllerWithWandSupport.hpp  AppModel.hpp  ComponentTransformNode.hpp  DrawingDirection.hpp  ExitGlut.hpp  GlutFramework.hpp  MagicTricks.hpp  MagicVrApp.hpp  MagicVrCaveGlutFramework.hpp  MagicVrDesktopGlutFramework.hpp  MagicVrGlutFramework.hpp  SimpleSceneManagerNavigator.hpp  Spiral.hpp  background.hpp  model.hpp  point.hpp
includes/magicvr/animation/: Animation.hpp  AnimationChildNode.hpp  AnimationContainer.hpp  AnimationNode.hpp  Animations.hpp  BezierAnimation.hpp  BezierCurve.hpp  BezierTranslationAnimation.hpp  BezierTranslationAnimationNode.hpp  BubbleAnimationsNode.hpp  BubblesAnimationNode.hpp  EaseAnimation.hpp  EaseInAnimation.hpp  EaseInOutAnimation.hpp  EaseOutAnimation.hpp  FireAnimationNode.hpp  FracTimeAnimation.hpp  MaxTimeAnimation.hpp  OnStopAnimation.hpp  OnStopRefAnimation.hpp  ParallelAnimation.hpp  ScaleAnimation.hpp  SequentialAnimation.hpp  SharedRefAnimationContainer.hpp  TranslationAnimation.hpp
includes/magicvr/leap/: FingerTipPosition.hpp
includes/magicvr/node/: IndexFingerTip.hpp  MovableNode.hpp  TrajectoryContainerNode.hpp  TrajectoryNode.hpp  WandNode.hpp  node.hpp
includes/magicvr/util/: VectorConverter.hpp  clamp.hpp  color.hpp  transformation.hpp  vectorToString.hpp
includes/trajecmp/compare/: less_than.hpp  match_by.hpp
includes/trajecmp/distance/: distances_to_start.hpp  modified_hausdorff.hpp
includes/trajecmp/functional/: functional.hpp
models/: Bubbles_Earth.mtl  Bubbles_Fire.mtl  Bubbles_Thunder.mtl  Bubbles_Water.mtl  Earth.mtl  EarthUnlocked.mtl  EarthUnlocked.wrl  Fire.mtl  FireUnlocked.mtl  FireUnlocked.wrl  Sockel.mtl  Thunder.mtl  ThunderUnlocked.mtl  ThunderUnlocked.wrl  Water.mtl  Water.wrl  WaterUnlocked.mtl
models/Bubbles/: Bubble_Fire.mtl  Bubble_Thunder.mtl  Bubble_Water.mtl  Bubble_Wind.mtl
models/Kapelle/: Kapelle.mtl
models/Lantern/: Lantern.mtl
models/NewStonehenge/: StonehengeNew.mtl
models/Sockel/: Sockel.mtl
models/Stonehenge/: Stonehenge.mtl  stonehenge.txt
models/Stones/: Stone_Fire.mtl  Stone_Thunder.mtl  Stone_Water.mtl  Stone_Wind.mtl
sources/: Arguments.cpp  Scene.cpp  main.cpp  opensg_vrpn.cpp  util.cpp  util.h
sources/glutFramework/: GlutFramework.cpp  GlutFramework.h  Keyboard.cpp  PerformanceTimer.cpp  main.cpp
sources/input/: RemoteManager.cpp  RemoteManager.h  Tracker.cpp
sources/magicvr/: AppController.cpp  AppControllerWithLeapSupport.cpp  AppControllerWithWandSupport.cpp  AppModel.cpp  ComponentTransformNode.cpp  GlutFramework.cpp  MagicTricks.cpp  MagicVrApp.cpp  MagicVrApp.hpp  MagicVrCaveGlutFramework.cpp  MagicVrDesktopGlutFramework.cpp  MagicVrGlutFramework.cpp  MagicVrGlutFramework.hpp  SimpleSceneManagerNavigator.cpp  Spiral.cpp  background.cpp
(+73 files in other folders)
